--- a/res/xml/dashboard_categories.xml
+++ b/res/xml/dashboard_categories.xml
@@ -201,6 +201,12 @@
         android:id="@+id/system_section"
         android:title="@string/header_category_system" >
 
+	<!-- BuckeyeDroid -->
+	<dashboard-tile
+		android:id="@+id/buckeydroid_settings"
+		android:title="@string/buckeyedroid_settings_title"
+		android:fragment="com.android.settings.buckeyedroid.BuckeyeDroidSettings"
+
         <!-- Date & Time -->
         <dashboard-tile
                 android:id="@+id/date_time_settings"
